--- a/index.html
+++ b/index.html
@@ -202,19 +202,19 @@
 
                                     <div class="container">
                                        <div class="skill-box">
-                                          <b>🤖 Artificial Intelligence </b>
+                                          <b>🤖 Artificial Intelligence </b> &nbsp; &nbsp; &nbsp; 
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/Keras-FF0000?style=for-the-badge&logo=keras&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/OpenCV-27338e?style=for-the-badge&logo=OpenCV&logoColor=white" height="25">
-                                          <br>
-                                          <b>☁ Cloud</b>
+                                          <br> <br>
+                                          <b>☁ Cloud</b> &nbsp; &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/microsoft%20azure-0089D6?style=for-the-badge&logo=microsoft-azure&logoColor=white" height="25">
-                                          <br>
-                                          <b>⚡ Database</b>
+                                          <br> <br>
+                                          <b>⚡ Database</b> &nbsp; &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" height="25">
-                                          <br>
-                                          <b>👨‍💻 Programming</b>
+                                          <br> <br>
+                                          <b>👨‍💻 Programming</b> &nbsp; &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/Numpy-777BB4?style=for-the-badge&logo=numpy&logoColor=white" height="25"> 
@@ -222,8 +222,8 @@
                                           <img src="https://img.shields.io/badge/Plotly-239120?style=for-the-badge&logo=plotly&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/SciPy-654FF0?style=for-the-badge&logo=SciPy&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/ScikitLearn-F7931E?style=for-the-badge&logo=scikit-learn&logoColor=white" height="25">
-                                          <br>
-                                          <b>💻 Dev</b> 
+                                          <br> <br>
+                                          <b>💻 Dev</b> &nbsp; &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/Visual%20Studio%20Code-0078D4?style=for-the-badge&logo=visual-studio-code&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GIT-E44C30?style=for-the-badge&logo=git&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" height="25">
