--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                                     <div class="container">
                                        <div class="skill-box">
-                                          <p style="font-size:18px" <b>🤖 Artificial Intelligence </b> </p>
+                                          <b>🤖 Artificial Intelligence</b> &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/Keras-FF0000?style=for-the-badge&logo=keras&logoColor=white" height="25">
