--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="colorlib-narrow-content">
                            <div class="row">
                               <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-
+                                    <div class="container">
                                        <div class="skill-box">
                                           <b>🤖 Artificial Intelligence</b> &nbsp; &nbsp;
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
@@ -227,6 +227,7 @@
                                           <img src="https://img.shields.io/badge/GIT-E44C30?style=for-the-badge&logo=git&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" height="25">
                                        </div>
+                                   </div>
                               </div>
                            </div>
                         </div>
