--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                        <i class="fa fa-line-chart"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>XSOR Capital</a> <span>July 2022 - Now</span></h2>
+                                       <h2>XSOR Capital</a> <span>July 2022 - April 2022</span></h2>
                                        <p><strong>Quant Dev</strong><br>
                                           Contributing in the developing of Machine Learning strategies for Algorithmic trading.<br>
                                           💻 Developing a Python framework for backtesting and live trading.<br>
@@ -166,7 +166,7 @@
                                        <i class="fa fa-terminal"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - May 2023</span></h2>
+                                       <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - Now</span></h2>
                                        <p><strong>NLP engineer intern</strong><br>
                                           Developed a Natural Language Processing pipeline for Know Your Customer (KYC) solutions.<br>
                                           🔧 Developed a Python framework for data preprocessing and feature extraction.<br>
