--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/me.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://nicolezattarin.github.io">Nicole Zattarin</a></h1>
-                  <!---- <p><strong>Quant Dev @ XSOR Capital </strong></p> --->
+                  -- <p><strong>Quant Analyst @ XSOR Capital </strong></p> -
                   <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -89,7 +89,7 @@
                                     <h2>About Me</h2>
                                     <hr>
                                     <p> I am a passionate and committed BSc Physicist and MSc student in Information Engineering with a strong interest in Data Science and Machine Learning.
-                                    <br>Currently working as a Quant Developer @ XSOR Capital, a London based investment boutique, where I am responsible for the development of the Machine Learning models for trading and the implementation of automatic trading strategies.
+                                    <br>Currently working as a Quant Analyst @ XSOR Capital, a London based investment boutique, where I am responsible for the development of the Machine Learning models for trading and the implementation of automatic trading strategies.
                                     <br>My education is mainly focused on the application of analytical and computational methods to the study of complex systems and real world problems, by means of state-of-the-art technologies.
                                  </div>
                               </div>
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2>XSOR Capital</a> <span>July 2022 - April 2022</span></h2>
-                                       <p><strong>Quant Dev</strong><br>
+                                       <p><strong>Quant Analyst</strong><br>
                                           Contributing in the developing of Machine Learning strategies for Algorithmic trading.<br>
                                           💻 Developing a Python framework for backtesting and live trading.<br>
                                           👨🏽‍💻 Implementing Machine Learning algorithms for financial time series prediction.<br>
