--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/me.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://nicolezattarin.github.io">Nicole Zattarin</a></h1>
-                  -- <p><strong>Quant Analyst @ XSOR Capital </strong></p> -
+                  <p><strong>Quant Analyst @ XSOR Capital </strong></p>
                   <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
