--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                        <i class="fa fa-terminal"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - May 2023</span></h2>
+                                       <h2>Smart KYC<span>March 2023 - May 2023</span></h2>
                                        <p><strong>NLP engineer intern</strong><br>
                                           Developed a Natural Language Processing pipeline for Know Your Customer (KYC) solutions.<br>
                                           🔧 Developed a Python framework for data preprocessing and feature extraction.<br>
